--- a/JS_exercises/bouncingBalls-objects/index.html
+++ b/JS_exercises/bouncingBalls-objects/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>bouncing balls</h1>
+    <p class="ball-counter">Ball count: </p>
     <canvas></canvas>
 
     <script src="main.js"></script>
