--- a/javascript_udemy/practice-places-01-starting-setup/index.html
+++ b/javascript_udemy/practice-places-01-starting-setup/index.html
@@ -8,7 +8,7 @@
   <title>Share a Place</title>
   <link rel="stylesheet" href="assets/styles/app.css" />
   <link rel="stylesheet" href="assets/styles/share-place.css" />
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-3-PI0hCfH91WbMTIF60RKHDol8M2ZiY">
+  <script async src="https://maps.googleapis.com/maps/api/js?key=googleapikey">
   </script>
 
   <script src="../src/SharePlace.js" type="module" defer></script>
